--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv"
-           android:text="123"
+           android:text="492"
            android:textColor="#000"
            android:textSize="40sp"
            android:layout_alignParentRight="true"
@@ -78,6 +78,18 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AC"
+                android:layout_weight="1"
+                android:backgroundTint="#fff"
+                android:textColor="@color/black"
+                android:layout_margin="2dp"
+                android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -88,13 +100,8 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
-           <ImageButton
-               android:layout_width="wrap_content"
-               android:layout_height="match_parent"
-               android:src="@drawable/ic_baseline_backspace_24"
-               android:layout_weight="1"
-               />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,6 +111,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
         </TableRow>
 
@@ -117,6 +125,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -127,6 +136,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -137,6 +147,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -147,6 +158,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
         </TableRow>
 
@@ -160,6 +172,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -170,6 +183,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -180,6 +194,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -190,6 +205,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
         </TableRow>
 
@@ -203,6 +219,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -213,6 +230,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -223,6 +241,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -233,6 +252,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
         </TableRow>
 
@@ -246,6 +266,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -256,6 +277,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -266,6 +288,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
             <Button
                 android:layout_width="wrap_content"
@@ -276,6 +299,7 @@
                 android:textColor="@color/black"
                 android:layout_margin="2dp"
                 android:textSize="20sp"
+                android:onClick="ButtonClick"
                 />
         </TableRow>
         </TableLayout>
